# john-webv2

./: LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: application_submitted.html  applicationform.html  base.html  bootstrap.html  footer.html  jobitem.html  jobpage.html  nav.html
