[tool.poetry]
name = "repl-nix-john-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_john_web"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
